fix: purpose of push to test on mobile -  final border-radius tweaks -

--- a/src/components/Cards/ImageCard/ImageCard.module.scss
+++ b/src/components/Cards/ImageCard/ImageCard.module.scss
@@ -58,6 +58,7 @@ $placeholder-background: #000;
 		img,
 		video {
 			width: 100%;
+			border-radius: 8px 8px 0 0;
 		}
 
 		// Hide default spinner in image
